#5, #12, #13, #15, #16 - #5: Add openFunction and closeFunction optional parameters to the   open() method. - #12: Add 'Frame Width' module setting and frameWidth optional   parameter to the open() method. - #13: Add lots of methods within the ChallengeTracker window object. - #15: Fix button behaviour on Player List when Minimal UI is active. - #16: Add 'Display Button' and 'Button Location' module settings to   control visibility and location of the Challenge Tracker button.

--- a/styles/challenge-tracker.css
+++ b/styles/challenge-tracker.css
@@ -47,13 +47,17 @@
 	transition-delay: 0.1s;
 }
 
+.challenge-tracker-player-list-placeholder {
+  min-width: 18px;
+}
+
 .challenge-tracker-player-list-button {
   background: transparent;
   border: 0;
   padding: 0;
   line-height: 0;
   align-self: center;
-  width: 60px;
+  min-width: 18px;
   cursor: pointer;
 }
 
@@ -67,6 +71,14 @@
   overflow: visible;
   box-shadow: none;
   filter: drop-shadow(0px 0px 5px rgb(255 0 0 / 1));
+}
+
+#challenge-tracker-control-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding: 0.1em;
 }
 
 #challenge-tracker-form
